2003-04-18  Per Bothner  <per@bothner.com>

	* lang-test.lisp:  Rename a duplicate test name.

2003-01-01  Per Bothner  <per@bothner.com>

	* lang-test.lisp:  Add a defmacro test.

2001-04-09  Per Bothner  <per@bothner.com>

	* Makefile.am (KAWA):  Update to use ../../../bin/kawa.

2000-06-26  Per Bothner  <per@bothner.com>

	* lang-test.lisp:  New test for separate name spaces.

	* Makefile.am (SOURCES):  New variable.

2000-06-25  Per Bothner  <per@bothner.com>

	New directory.
	* lang-test.lisp:  New test set.
	* Makefile.am:  New.